# MDPObjectSearch

./: .gitignore
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/POMDPPolicies/100/: backpack.txt  chair.txt  desk.txt  door.txt  keyboard.txt  laptop.txt  monitor.txt  mug.txt  pomdp_perfect_PBVI_lamp.txt  pomdp_perfect_PBVI_mouse.txt  pomdp_perfect_PBVI_plant.txt  pomdp_perfect_PBVI_telephone.txt  pomdp_perfect_PBVI_whiteboard.txt  pomdp_perfect_PBVI_window.txt
app/src/main/assets/POMDPPolicies/50/: backpack.txt  chair.txt  desk.txt  door.txt  keyboard.txt  monitor.txt  mouse.txt  plant.txt  pomdp_50_PBVI_lamp.txt  pomdp_50_PBVI_laptop.txt  pomdp_50_PBVI_mug.txt  pomdp_50_PBVI_telephone.txt  whiteboard.txt  window.txt
app/src/main/assets/POMDPPolicies/75/: desk.txt  door.txt  keyboard.txt  monitor.txt  mouse.txt  plant.txt  pomdp_75_PBVI_backpack.txt  pomdp_75_PBVI_chair.txt  pomdp_75_PBVI_lamp.txt  pomdp_75_PBVI_laptop.txt  pomdp_75_PBVI_mug.txt  pomdp_75_PBVI_telephone.txt  whiteboard.txt  window.txt
app/src/main/cpp/include/: jniWrapper.hpp
app/src/main/cpp/include/MarkerDetector/: MarkerDetector.hpp
app/src/main/cpp/include/whycon/common/: CRawImage.h
app/src/main/cpp/include/whycon/imageproc/: CCircleDetect.h
app/src/main/cpp/src/: jniWrapper.cpp
app/src/main/cpp/src/MarkerDetector/: MarkerDetector.cpp
app/src/main/java/com/example/jaycee/mdpobjectsearch/: ActivityGuided.java  ActivityLauncher.java  ActivityUnguided.java  Arrow.java  BarcodeListener.java  BarcodeScanner.java  CameraActivityBase.java  CameraSurface.java  CentreView.java  JNIBridge.java  MarkerScanner.java  Metrics.java  Objects.java  RenderListener.java  ScannerWindow.java  SoundGenerator.java
app/src/main/java/com/example/jaycee/mdpobjectsearch/guidancetools/: GuidanceInterface.java  Params.java
app/src/main/java/com/example/jaycee/mdpobjectsearch/helpers/: ClassHelpers.java  PermissionHelper.java  SnackbarHelper.java  TGAReaderHelper.java
app/src/main/java/com/example/jaycee/mdpobjectsearch/rendering/: ARObject.java  BackgroundRenderer.java  ObjectRenderer.java  (+2 more)
app/src/main/java/com/example/jaycee/pomdpobjectsearch/: ActivityCamera.java  ActivityGuided.java  ActivityLauncher.java  ActivityUnguided.java  BarcodeListener.java  BarcodeScanner.java  CameraActivityBase.java  CameraSurface.java  JNIBridge.java  Metrics.java  Objects.java  SoundGenerator.java
app/src/main/res/layout/: activity_camera.xml  activity_launcher.xml
app/src/main/res/menu/: menu_objects.xml
(+35 files in other folders)
